--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body {
 .sidebar {
     width: 300px;
     background-color: #f5f5f5;
-    padding: 20px;
+    
+    padding: 5px 20px 20px 20px;
     position: fixed;
     height: 100vh;
     overflow-y: auto;
@@ -454,3 +455,18 @@ img {
     margin:5px;
     
 }
+.sidebar img {
+    width: 20%;
+    height: auto;   
+    /* top: 50%; */
+    
+    left: 50%;
+    /* transform: translate(-50%, -50%); Căn giữa bằng cách dịch chuyển */
+        /* Đặt chiều cao cụ thể */
+    
+}
+.content .img img {
+    width: 40%;
+    opacity: 0.2;
+}
+
