--- a/style.css
+++ b/style.css
@@ -32,9 +32,8 @@ body {
 .content {
     margin-left: 300px;
     padding: 20px;
-    display:flex;
-    width: 100%;
     flex: 1;
+    display:flex;
     background-color: #ede8e8;
     
 }
@@ -175,6 +174,18 @@ section {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    width: 100%;
+    height: fit-content;
+    
+}
+
+.content-section1 {
+    display: none;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    margin-left: 10px;
 }
 
 
@@ -595,20 +606,29 @@ img {
     font-size: 13px;
 }
 
-/* Fixed */
+/* Chia tab */
 
-
-
-.left-panel {
-    /* width: 30%; */
-    background: #f4f4f4;
-    padding: 20px;
-    border-right: 1px solid #ccc;
-
+.toggle-btn {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 80%;
+    font-size: 18px;
+    text-align: center;
+    margin: 0 10px;
 }
 
-.right-panel {
-    /* width: 70%; */
-    padding: 20px;
-    display: none;
+.toggle-btn:hover {
+    background-color: #0056b3;
+}
+.content-section
+{
+    transition: width 0.4s ease-in-out;
+}
+.content-section1
+{
+    transition: width 0.4s ease-in-out;
 }
