--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ section {
     flex-direction: row;  /* Giữ các dòng ảnh theo cột */
      /* Căn giữa nội dung */
     gap: 20px;  /* Khoảng cách giữa các dòng */
-    padding:10px 80px 10px 80px;
+   
 }
 
 .content21 img {
@@ -402,9 +402,9 @@ section {
     height: 600px;
     padding-bottom:30px;
 }
-.image-row{
+/* .image-row{
     padding: 0px 20px 0px 20px;
-}
+} */
 
 
 img {
@@ -696,7 +696,7 @@ img {
   
     .content21 {
       flex-direction: row;
-      padding: 10px 80px;
+      
     }
   }
   
